<resources>
    <string name="app_name">Food4Us</string>

    <!-- Please refer to https://www.projectoxford.ai/ to get your subscription key -->
    <!-- If you have one subscription key, you can add it here to use the service -->
    <string name="subscription_key" translatable="false">b1fb2f7c235d439590fa531a8d0c65f9</string>
    <string name="subscription_apiroot" translatable="false">https://westcentralus.api.cognitive.microsoft.com/vision/v1.0</string>
    <string name="add_subscription_key_tip_title" translatable="false">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip" translatable="false">Please put your subscription key to source file \"app/res/values/strings.xml\" to enable Vision API calls.</string>


    <string name="key1" translatable="false">f97e19b861eb459ab3907b6b1fb4e33e</string>
    <string name="key2" translatable="false">b1fb2f7c235d439590fa531a8d0c65f9</string>
    <string name="key3" translatable="false">34f8c1cb3fcf4ccfbeceea55e96f3693</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_analyze" translatable="false">Analyze Image</string>
    <string name="title_activity_analyze_domain" translatable="false">Analyze Image In Domain</string>
    <string name="title_activity_describe" translatable="false">Describe Image</string>
    <string name="title_activity_recognize" translatable="false">Recognize Text</string>
    <string name="title_activity_handwriting_recognize" translatable="false">Recognize Handwriting Text</string>
    <string name="title_activity_thumbnail" translatable="false">Thumbnail Image</string>

    <!-- Select image activity -->
    <string name="select_an_image" translatable="false">Select an Image</string>
    <string name="take_photo" translatable="false">Take a Photo</string>
    <string name="select_image_in_album" translatable="false">From Gallery</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="points_1">1024 Points</string>
    <string name="person_name">John Smith</string>
    <string name="email_hi">Email : johnsmith@gmail.com</string>
    <string name="phone_l">Phone Number: +971 -- - - -- -- --</string>
    <string name="donor_type">Donator Type : Individual</string>
    <string name="no_donation">Number of Donations: 6</string>
    <string name="popup_btn">Click Increase your Points</string>
    <string name="u_post">Upload A Post</string>
    <string name="title_post">Title</string>
    <string name="desc_post">Description</string>
    <string name="tags_Post">Tags:</string>
    <string name="loc_l">Location</string>
    <string name="up_string">Upload</string>
    <string name="analyze_str">Analyze</string>
    <string name="pov">Points and Vouchers</string>
    <string name="pov_Desc">Exchange your points for vouchers from your favorite restaurants! Get Upto 80% Off on Selected Restaurants!</string>
    <string name="vouch_1">10% Off  Apple Bees</string>
    <string name="vouch_2">20% Off Juice For Us</string>
    <string name="vouch_3">5% For Your Next Meal at ..</string>
    <string name="vouch_4">60% Off Hurry!..</string>

</resources>
