<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/pov"

        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="150dp"
        android:layout_height="200dp"

        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="92dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/img_appicon2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/tv_appname2"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/tv_appname2"
                android:src="@drawable/juice"/>

            <TextView
                android:id="@+id/tv_appname2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_appicon2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:text="@string/vouch_2"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_marginStart="17dp"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"

        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/card_view2"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/img_appicon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/title_s"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/title_s"
                android:src="@drawable/burger"/>

            <TextView
                android:id="@+id/title_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_appicon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:text="@string/vouch_1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="150dp"
        android:layout_height="200dp"

        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/card_view4"
        android:layout_alignStart="@+id/card_view1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/img_appicon3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/tv_appname3"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/tv_appname3"
                android:src="@drawable/ramen"/>

            <TextView
                android:id="@+id/tv_appname3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_appicon3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:text="@string/vouch_3"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view4"
        android:layout_width="150dp"
        android:layout_height="200dp"

        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/card_view2"
        android:layout_alignStart="@+id/card_view2"
        android:layout_marginTop="38dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/img_appicon4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/tv_appname3"
                android:layout_alignParentTop="true"
                android:src="@drawable/thing"/>

            <TextView
                android:id="@+id/tv_appname4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_appicon4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:text="@string/vouch_4"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/pov_Desc"
        android:textAlignment="center"/>

</RelativeLayout>
